@@ -106,6 +106,23 @@ public void SetBaseGC (StateType state, Gdk.GC gc)
 }
 
 [DllImport("gtksharpglue")]
+static extern IntPtr gtksharp_gtk_style_get_text_gc (IntPtr style, int i);
+
+public Gdk.GC TextGC (StateType state)
+{
+	IntPtr raw = gtksharp_gtk_style_get_text_gc (Handle, (int) state);
+	return EnsureGC (raw);
+}
+
+[DllImport("gtksharpglue")]
+static extern IntPtr gtksharp_gtk_style_set_text_gc (IntPtr style, int i, IntPtr gc);
+
+public void SetTextGC (StateType state, Gdk.GC gc)
+{
+		gtksharp_gtk_style_set_text_gc (Handle, (int) state, gc.Handle);
+}
+
+[DllImport("gtksharpglue")]
 static extern IntPtr gtksharp_gtk_style_get_white (IntPtr style);
 
 public Gdk.Color White {
