@@ -1,3 +1,8 @@
+2003-08-28  Alp Toker  <alp@atoker.com>
+
+	* glue/style.c: glue and corresponding .custom entries for
+	TextGC
+
 2003-08-26  John Luke  <jluke@cfl.rr.com>
 
 	* gtk/ThreadNotify.cs: mark dllimported methods private
